add: base route to swagger
